# rust-challenge

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
src/: generator.rs  lib.rs  main.rs  metrics.rs  model.rs  pipeline.rs  storage.rs
src/generator/: address.rs  config.rs  generator.rs  mod.rs  transfer.rs
src/metrics/: metrics.rs  mod.rs
src/pipeline/: mod.rs  pipeline.rs
src/storage/: aggregate.rs  clickhouse.rs  errors.rs  event_store.rs  events.rs  mock.rs  mod.rs  projections.rs  storage.rs  storage_trait.rs
src/storage/commands/: event_store.rs  mod.rs  save_stats.rs  save_transfers.rs
src/storage/queries/: get_stats.rs  mod.rs
tests/: mod.rs
tests/generator/: address_test.rs  address_tests.rs  config.rs  config_test.rs  config_tests.rs  integration_test.rs  intergration.rs  mod.rs  transfer_test.rs  transfer_tests.rs
tests/metrics/: metrics_test.rs  metrics_tests.rs  mod.rs
tests/pipeline/: pipeline_test.rs
