[package]
name = "token_transfers"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
serde = { version = "1.0.219", features = ["derive"] }
clickhouse-rs = { version = "1.1.0-alpha.1" }
chrono = "0.4.41"
futures = "0.3.31"
tokio = { version = "1.45.0", features = ["full"] }
thiserror = "1.0.69"
serde_json = "1.0.140"
async-trait = "0.1.88"
anyhow = "1.0"


[lib]
name = "mycrate"
path = "src/lib.rs"
