[package]
name = "token_transfers"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
clickhouse-rs = { version = "1.1.0-alpha.1" }
chrono = "0.4.41"
tokio = { version = "1.45.1", features = ["full"] }
thiserror = "2.0.12"
async-trait = "0.1.88"
anyhow = "1.0"


[lib]
name = "mycrate"
path = "src/lib.rs"
